# QueueContinousVSAddin

./: QueueContinousExtension.VC.opendb  QueueContinousExtension.sln  README.md
QueueContinousExtension/: CommonIncludes.h  EditorDocument.h  EditorEvents.inl  EditorFactory.h  EditorPersistance.inl  Library.cpp  MyToolWindow.h  Package.h  QueueContinousExtension.def  QueueContinousExtension.idl  QueueContinousExtension.pkgdef  QueueContinousExtension.rc  QueueContinousExtension.vcxproj  QueueContinousExtension.vcxproj.filters  guids.cpp  guids.h  resource.h
QueueContinousExtension/QueueContinousExtensionVSIX/: QueueContinousExtensionVSIX.csproj  source.extension.vsixmanifest
QueueContinousExtension/Templates/: QueueContinousExtension.vsdir
QueueContinousExtensionUi/: CommandIds.h  PackageCommands.vsct  QueueContinousExtensionUI.aps  QueueContinousExtensionUI.rc  QueueContinousExtensionUi.vcxproj  QueueContinousExtensionUi.vcxproj.filters  resource.h
TeamCityAPI/: CMakeLists.txt
TeamCityAPI/SimpleTeamCityConsole/: CMakeLists.txt  Library.cpp  Library.h  main.cpp
TeamCityAPI/TeamCityAPI/: CMakeLists.txt  TeamCity.cpp  TeamCity.h  TeamCityAPI.h
TeamCityAPI/curl-7.19.2/lib/: CMakeLists.txt  curllib.vcproj
TeamCityAPI/curl-7.19.2/lib/debug/: BuildLog.htm  Test_Curl.exp  Test_Curl.ilk  Test_Curl.lib  curllib.bsc  curllib.lib  vc80.idb
TeamCityAPI/curl-7.19.2/lib/release/: BuildLog.htm  Test_Curl.exp  Test_Curl.lib  curllib.bsc  curllib.lib  vc80.idb
Test_VSPackage2/: Test_VSPackage2.sln  UpgradeLog.htm
Test_VSPackage2/Test_VSPackage2/: CommonIncludes.h  EditorDocument.h  EditorEvents.inl  EditorFactory.h  EditorPersistance.inl  Library.h  MyToolWindow.h  Package.h  Test_VSPackage2.aps  Test_VSPackage2.def  Test_VSPackage2.idl  Test_VSPackage2.pkgdef  Test_VSPackage2.rc  Test_VSPackage2.vcxproj  Test_VSPackage2.vcxproj.filters  guids.cpp  guids.h  resource.h
Test_VSPackage2/Test_VSPackage2/Templates/: Test_VSPackage2.vsdir
Test_VSPackage2/Test_VSPackage2/Test_VSPackage2VSIX/: Test_VSPackage2VSIX.csproj  source.extension.vsixmanifest
Test_VSPackage2/Test_VSPackage2Ui/: CommandIds.h  PackageCommands.vsct  Test_VSPackage2UI.aps  Test_VSPackage2UI.rc  Test_VSPackage2Ui.vcxproj  Test_VSPackage2Ui.vcxproj.filters  resource.h
git2/: git2.lib
