PROJECT (SimpleTeamCityConsole)

cmake_minimum_required(VERSION 2.6)

# This is in case we ever need to know if we were creating a VS or Xcode project
IF(CMAKE_GENERATOR MATCHES "Visual Studio 8")
  SET(GENERATING_IDE_MAKEFILE 1)
ELSEIF(CMAKE_GENERATOR MATCHES "Xcode")
  SET(GENERATING_IDE_MAKEFILE 1)
ENDIF(CMAKE_GENERATOR MATCHES "Visual Studio 8")

IF(WIN32)
  ADD_DEFINITIONS( -D "_UNICODE")
  SET( CMAKE_MFC_FLAG 0 )
ENDIF(WIN32)

#FIND_PACKAGE( Qt4 REQUIRED )
#SET( QT_USE_QTQTCORE TRUE )
#SET( QT_USE_QTQTGUI TRUE )
#SET( QT_USE_QTXML TRUE )
#SET( QT_USE_QTMAIN TRUE )
#INCLUDE( ${QT_USE_FILE} )

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCE_FILES *.cpp)

SOURCE_GROUP(Source FILES ${SOURCE_FILES})
SOURCE_GROUP(Headers FILES ${HEADERS})

ADD_EXECUTABLE(SimpleTeamCityConsole ${SOURCE_FILES} ${HEADERS})

IF(WIN32)
ELSEIF(UNIX)
   SET( OSSPECIFIC_LIBRARIES dl pthread )
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(SimpleTeamCityConsole TeamCityAPI curl ${QT_LIBRARIES} ${OSSPECIFIC_LIBRARIES})
INCLUDE_DIRECTORIES( ${PROJECT_BINARY_DIR} )
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} )
INCLUDE_DIRECTORIES(SimpleTeamCityConsole .. ../TeamCityAPI)

IF(WIN32)
   SET_TARGET_PROPERTIES(SimpleTeamCityConsole PROPERTIES COMPILE_FLAGS /Zc:wchar_t-)
ENDIF(WIN32)
