PROJECT (curl)

cmake_minimum_required(VERSION 2.6)

# This is in case we ever need to know if we were creating a VS or Xcode project
IF(CMAKE_GENERATOR MATCHES "Visual Studio 8")
  SET(GENERATING_IDE_MAKEFILE 1)
ELSEIF(CMAKE_GENERATOR MATCHES "Xcode")
  SET(GENERATING_IDE_MAKEFILE 1)
ENDIF(CMAKE_GENERATOR MATCHES "Visual Studio 8")

IF(WIN32)
  ADD_DEFINITIONS( -D "_UNICODE")
  SET( CMAKE_MFC_FLAG 0 )
ENDIF(WIN32)

#ADD_DEFINITIONS(-DUSE_SSLEAY)
#ADD_DEFINITIONS(-DUSE_OPENSSL)

#FIND_PACKAGE( Qt4 REQUIRED )
#SET( QT_USE_QTQTCORE TRUE )
#SET( QT_USE_QTQTGUI TRUE )
#SET( QT_USE_QTXML TRUE )
#INCLUDE( ${QT_USE_FILE} )

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCE_FILES *.c)

SOURCE_GROUP(Source FILES ${SOURCE_FILES})
SOURCE_GROUP(Headers FILES ${HEADERS})

ADD_LIBRARY(curl STATIC ${SOURCE_FILES} ${HEADERS})
INCLUDE_DIRECTORIES( .. ../include )
ADD_DEFINITIONS(-DBUILDING_LIBCURL)

IF(WIN32)
   SET_TARGET_PROPERTIES(curl PROPERTIES COMPILE_FLAGS /Zc:wchar_t-)
ENDIF(WIN32)
